1. Create a "ProductsList" component and connect it in the "CatalogView" component; 2. Create a "ProductsListItem" component and connect it to the "ProductsList" component; 3. Fix a bug that caused a horizontal scrollbar to appear; 4. Create a file "src/data/productsData.js" containing products data; 5. Add 15 pictures to the "public/img/products" folder.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,14 +6,17 @@
 
 html {
   height: 100vh;
-  min-height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
-body,
-#app {
+body {
   height: 100%;
   width: 100%;
+}
+
+#app {
+  width: 100%;
+  overflow-y: auto;
 }
 
 a {
